src/test/deca/codegen/invalid/errors/floatOverflowConstIntFloat.deca
// Description :
//    Test du débordement sur une opération arithmétique sur des flottants
//
// Resultats :
//    Error: Float Operation Overflow

{
    float x = 1000000 * 340282346638528860000000000000000000.0;
}